// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataProductAvailability - BasicAvailabilityKey renders correctly when selection is enabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-10m0fzl-legendContainer"
      >
        <div
          class="css-11we17h-legendTitleContainer"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-asxkz7-MuiTypography-root-legendTitle"
          >
            Key:
          </h6>
          <button
            aria-label="Help - Data Availability Chart Key"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14jmu2t-MuiButtonBase-root-MuiIconButton-root-legendTitleIcon"
            tabindex="0"
            title="Help - Data Availability Chart Key"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="HelpOutlineOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
            </svg>
          </button>
        </div>
        <div>
          <div
            class="css-1azw17k-legendElement"
            title="Data have been published and released. Data are available for download"
          >
            <svg
              height="14"
              width="151"
            >
              <rect
                fill="#002c77"
                height="12px"
                rx="2px"
                width="7px"
                x="0"
                y="0"
              />
              <text
                class="css-1obxh3u-legendElementText"
                x="15"
                y="10"
              >
                Release Available
              </text>
            </svg>
          </div>
          <div
            class="css-1azw17k-legendElement"
            title="Data was neither expected nor collected"
          >
            <svg
              height="14"
              width="119"
            >
              <rect
                fill="#d7d9d9"
                height="12px"
                rx="2px"
                width="7px"
                x="0"
                y="0"
              />
              <text
                class="css-1obxh3u-legendElementText"
                x="15"
                y="10"
              >
                Not Available
              </text>
            </svg>
          </div>
        </div>
        <div>
          <div
            class="css-1azw17k-legendElement"
            title="If the chart is presenting a roll-up (e.g. view by state) then all sites rolled into a given row are selected"
          >
            <svg
              height="14"
              width="186"
            >
              <rect
                fill="#0073cf"
                height="10"
                width="30"
                x="0.5"
                y="1.5"
              />
              <rect
                fill="#5ca6e3"
                height="12"
                stroke="#0073cf"
                stroke-width="1.5"
                width="4"
                x="0.5"
                y="0.5"
              />
              <rect
                fill="#5ca6e3"
                height="12"
                stroke="#0073cf"
                stroke-width="1.5"
                width="4"
                x="26"
                y="0.5"
              />
              <text
                class="css-1obxh3u-legendElementText"
                x="42"
                y="10"
              >
                All sites selected
              </text>
            </svg>
          </div>
          <div
            class="css-1azw17k-legendElement"
            title="If the chart is presenting a roll-up (e.g. view by state) then one or more but not all of the sites rolled into a given row are selected"
          >
            <svg
              height="14"
              width="194"
            >
              <rect
                fill="#8abfec"
                height="10"
                width="30"
                x="0.5"
                y="1.5"
              />
              <rect
                fill="#5ca6e3"
                height="12"
                stroke="#0073cf"
                stroke-width="1.5"
                width="4"
                x="0.5"
                y="0.5"
              />
              <rect
                fill="#5ca6e3"
                height="12"
                stroke="#0073cf"
                stroke-width="1.5"
                width="4"
                x="26"
                y="0.5"
              />
              <text
                class="css-1obxh3u-legendElementText"
                x="42"
                y="10"
              >
                Some sites selected
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-10m0fzl-legendContainer"
    >
      <div
        class="css-11we17h-legendTitleContainer"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-asxkz7-MuiTypography-root-legendTitle"
        >
          Key:
        </h6>
        <button
          aria-label="Help - Data Availability Chart Key"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14jmu2t-MuiButtonBase-root-MuiIconButton-root-legendTitleIcon"
          tabindex="0"
          title="Help - Data Availability Chart Key"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="HelpOutlineOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
            />
          </svg>
        </button>
      </div>
      <div>
        <div
          class="css-1azw17k-legendElement"
          title="Data have been published and released. Data are available for download"
        >
          <svg
            height="14"
            width="151"
          >
            <rect
              fill="#002c77"
              height="12px"
              rx="2px"
              width="7px"
              x="0"
              y="0"
            />
            <text
              class="css-1obxh3u-legendElementText"
              x="15"
              y="10"
            >
              Release Available
            </text>
          </svg>
        </div>
        <div
          class="css-1azw17k-legendElement"
          title="Data was neither expected nor collected"
        >
          <svg
            height="14"
            width="119"
          >
            <rect
              fill="#d7d9d9"
              height="12px"
              rx="2px"
              width="7px"
              x="0"
              y="0"
            />
            <text
              class="css-1obxh3u-legendElementText"
              x="15"
              y="10"
            >
              Not Available
            </text>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="css-1azw17k-legendElement"
          title="If the chart is presenting a roll-up (e.g. view by state) then all sites rolled into a given row are selected"
        >
          <svg
            height="14"
            width="186"
          >
            <rect
              fill="#0073cf"
              height="10"
              width="30"
              x="0.5"
              y="1.5"
            />
            <rect
              fill="#5ca6e3"
              height="12"
              stroke="#0073cf"
              stroke-width="1.5"
              width="4"
              x="0.5"
              y="0.5"
            />
            <rect
              fill="#5ca6e3"
              height="12"
              stroke="#0073cf"
              stroke-width="1.5"
              width="4"
              x="26"
              y="0.5"
            />
            <text
              class="css-1obxh3u-legendElementText"
              x="42"
              y="10"
            >
              All sites selected
            </text>
          </svg>
        </div>
        <div
          class="css-1azw17k-legendElement"
          title="If the chart is presenting a roll-up (e.g. view by state) then one or more but not all of the sites rolled into a given row are selected"
        >
          <svg
            height="14"
            width="194"
          >
            <rect
              fill="#8abfec"
              height="10"
              width="30"
              x="0.5"
              y="1.5"
            />
            <rect
              fill="#5ca6e3"
              height="12"
              stroke="#0073cf"
              stroke-width="1.5"
              width="4"
              x="0.5"
              y="0.5"
            />
            <rect
              fill="#5ca6e3"
              height="12"
              stroke="#0073cf"
              stroke-width="1.5"
              width="4"
              x="26"
              y="0.5"
            />
            <text
              class="css-1obxh3u-legendElementText"
              x="42"
              y="10"
            >
              Some sites selected
            </text>
          </svg>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DataProductAvailability - BasicAvailabilityKey renders correctly when selection is not enabled (default) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-10m0fzl-legendContainer"
      >
        <div
          class="css-11we17h-legendTitleContainer"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-asxkz7-MuiTypography-root-legendTitle"
          >
            Key:
          </h6>
          <button
            aria-label="Help - Data Availability Chart Key"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14jmu2t-MuiButtonBase-root-MuiIconButton-root-legendTitleIcon"
            tabindex="0"
            title="Help - Data Availability Chart Key"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
              data-testid="HelpOutlineOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
            </svg>
          </button>
        </div>
        <div>
          <div
            class="css-1azw17k-legendElement"
            title="Data have been published and released. Data are available for download"
          >
            <svg
              height="14"
              width="151"
            >
              <rect
                fill="#002c77"
                height="12px"
                rx="2px"
                width="7px"
                x="0"
                y="0"
              />
              <text
                class="css-1obxh3u-legendElementText"
                x="15"
                y="10"
              >
                Release Available
              </text>
            </svg>
          </div>
        </div>
        <div>
          <div
            class="css-1azw17k-legendElement"
            title="Data was neither expected nor collected"
          >
            <svg
              height="14"
              width="119"
            >
              <rect
                fill="#d7d9d9"
                height="12px"
                rx="2px"
                width="7px"
                x="0"
                y="0"
              />
              <text
                class="css-1obxh3u-legendElementText"
                x="15"
                y="10"
              >
                Not Available
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-10m0fzl-legendContainer"
    >
      <div
        class="css-11we17h-legendTitleContainer"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-asxkz7-MuiTypography-root-legendTitle"
        >
          Key:
        </h6>
        <button
          aria-label="Help - Data Availability Chart Key"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14jmu2t-MuiButtonBase-root-MuiIconButton-root-legendTitleIcon"
          tabindex="0"
          title="Help - Data Availability Chart Key"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="HelpOutlineOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
            />
          </svg>
        </button>
      </div>
      <div>
        <div
          class="css-1azw17k-legendElement"
          title="Data have been published and released. Data are available for download"
        >
          <svg
            height="14"
            width="151"
          >
            <rect
              fill="#002c77"
              height="12px"
              rx="2px"
              width="7px"
              x="0"
              y="0"
            />
            <text
              class="css-1obxh3u-legendElementText"
              x="15"
              y="10"
            >
              Release Available
            </text>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="css-1azw17k-legendElement"
          title="Data was neither expected nor collected"
        >
          <svg
            height="14"
            width="119"
          >
            <rect
              fill="#d7d9d9"
              height="12px"
              rx="2px"
              width="7px"
              x="0"
              y="0"
            />
            <text
              class="css-1obxh3u-legendElementText"
              x="15"
              y="10"
            >
              Not Available
            </text>
          </svg>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
